--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,3 +1,7 @@
 <div>
-    <textarea name="" id="" cols="30" rows="10"></textarea>
+    <h1>Create Post</h1>
+    <input type="text" id="title">
+    <textarea name="" id="" cols="30" rows="10" id="body"></textarea>
+    <button id="submit">Submit</button>
 </div>
+<script src="js/dashboard.js"></script>
