--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,6 +17,7 @@
     {{#if logged_in}}
     <nav>
       <button class="btn" id="logout">logout</button>
+    <a href="/dashboard">Create Post</a>
     </nav>
     {{else}}
     <nav>
