--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -2,11 +2,19 @@
 
 <form class="form signup-form">
   <div class="form-group">
+    <label for="name-signup">Name:</label>
+    <input class="form-input" type="text" id="name-signup" />
+  </div>
+  <div class="form-group">
+    <label for="lastName-signup">Last Name:</label>
+    <input class="form-input" type="text" id="lastName-signup" />
+  </div>
+  <div class="form-group">
     <label for="email-signup">email:</label>
     <input class="form-input" type="text" id="email-signup" />
   </div>
   <div class="form-group">
-    <label for="password-signup">password:</label>
+    <label for="password-signup">Password:</label>
     <input class="form-input" type="password" id="password-signup" />
   </div>
   <div class="form-group">
